# selfdeletion-rs

./: Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs
