[package]
name = "selfdeletion"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.60.0", features = [
    "Wdk",
    "Wdk_Storage",
    "Wdk_Storage_FileSystem",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_IO"
] }
winapi = { version = "0.3.9", features = [
    "fileapi",
    "handleapi",
    "heapapi",
    "minwinbase",
    "winbase",
    "winnt",
] }
ntapi = { version = "0.4.1" }